--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import "./styles/fonts.css";
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -55,6 +56,7 @@
   --shadow-2xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.4);
   --tracking-normal: -0.025em;
   --spacing: 0.27rem;
+  --mikhak-font: "MikhakFD", sans-serif;
 }
 
 .dark {
@@ -146,6 +148,7 @@
   --font-sans: var(--font-sans);
   --font-mono: var(--font-mono);
   --font-serif: var(--font-serif);
+  --font-mikhak: var(--mikhak-font);
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -174,7 +177,8 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-light;
     letter-spacing: var(--tracking-normal);
+    direction: rtl;
   }
 }
